...
                   password: authView.passwordTextField.text) { (result) in
            switch result {
            case .success(let user):
                self.user = user
                DispatchQueue.main.async {
                    self.hideLoader()
                    self.showAlert(with: "Welcome!",
                                   and: "\(user.username)") {
                        self.presentNextVC()
                    }
                }
            case .failure(let error):
                DispatchQueue.main.async {
...
